--- a/Unit3_BTRE/templates/listings/listing.html
+++ b/Unit3_BTRE/templates/listings/listing.html
@@ -43,7 +43,7 @@
           <div class="row mb-5 thumbs">
             <div class="col-md-2">
               <a href="{{listing.photo_1.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_1.url}}" alt="" class="img-fluid">
               </a>
             </div>
           {% endif %}
@@ -51,35 +51,35 @@
           {% if listing.photo_2 %}
             <div class="col-md-2">
               <a href="{{listing.photo_2.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_2.url}}" alt="" class="img-fluid">
               </a>
             </div>
           {%endif%}
           {% if listing.photo_3 %}
             <div class="col-md-2">
               <a href="{{listing.photo_3.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_3.url}}" alt="" class="img-fluid">
               </a>
             </div>
             {%endif%}
             {% if listing.photo_4 %}
             <div class="col-md-2">
               <a href="{{listing.photo_4.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_4.url}}" alt="" class="img-fluid">
               </a>
             </div>
             {%endif%}
             {% if listing.photo_5 %}
             <div class="col-md-2">
               <a href="{{listing.photo_5.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_5.url}}" alt="" class="img-fluid">
               </a>
             </div>
             {%endif%}
             {% if listing.photo_6 %}
             <div class="col-md-2">
               <a href="{{listing.photo_6.url}}" data-lightbox="home-images">
-                <img src="" alt="" class="img-fluid">
+                <img src="{{listing.photo_6.url}}" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -195,5 +195,4 @@
   </div>
 
 {% endblock content %}
-
 
