--- a/Unit3_BTRE/templates/accounts/dashboard.html
+++ b/Unit3_BTRE/templates/accounts/dashboard.html
@@ -33,7 +33,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2>Welcome John</h2>
+          <h2>Welcome {{user.first_name}}</h2>
+          {% if inquiries %}
           <p>Here are the property listings that you have inquired about</p>
           <table class="table">
             <thead>
@@ -44,29 +45,21 @@
               </tr>
             </thead>
             <tbody>
+            {% for inquiry in inquiries  %}
               <tr>
-                <td>22</td>
-                <td>45 Drivewood Circle</td>
+                <td>{{forloop.counter}}</td>
+                <td>{{inquiry.listing}}</td>
                 <td>
-                  <a class="btn btn-light" href="#">View Listing</a>
+                  <a class="btn btn-light" href="{% url 'listing' inquiry.listing_id %}">View Listing</a>
                 </td>
               </tr>
-              <tr>
-                <td>43</td>
-                <td>22 Westbrook rd</td>
-                <td>
-                  <a class="btn btn-light" href="#">View Listing</a>
-                </td>
-              </tr>
-              <tr>
-                <td>31</td>
-                <td>12 Samson Ave</td>
-                <td>
-                  <a class="btn btn-light" href="#">View Listing</a>
-                </td>
-              </tr>
+              {% endfor %}
+             
             </tbody>
           </table>
+          {% else %}
+            <p>No inquiries yet!</p>
+          {% endif %}
         </div>
       </div>
     </div>
